移动端适配

--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,20 @@
 </head>
 
 <body>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/highlight.min.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/highlightjs-line-numbers.js@2.7.0/dist/highlightjs-line-numbers.min.js"></script>
   <div id="app"></div>
 
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script src="./js/highlight.min.js" async></script>
+  <script src="./js/highlightjs-line-numbers.min.js" async></script>
+  <script src="./js/jquery-3.4.1.min.js" async></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-141203333-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-141203333-1');
+  </script>
+
 </body>
 
 </html>
