--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,8 @@
 <body>
   <div id="app"></div>
 
-  <script src="./js/highlight.min.js" async></script>
-  <script src="./js/highlightjs-line-numbers.min.js" async></script>
+  <script src="./js/highlight.min.js" defer></script>
+  <script src="./js/highlightjs-line-numbers.min.js" defer></script>
   <script src="./js/jquery-3.4.1.min.js" async></script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-141203333-1"></script>
   <script>
