--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,22 @@
   <script src="./js/highlightjs-line-numbers.min.js" defer></script>
   <script src="./js/jquery-3.4.1.min.js" async></script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-141203333-1"></script>
+
+  <script>
+
+
+    // var disqus_config = function () {
+    //   this.page.url = "/#/article/"
+    //   this.page.identifier = window.location.hash.slice(10)
+    // };
+
+    // (function () { // DON'T EDIT BELOW THIS LINE
+    //   var d = document, s = d.createElement('script');
+    //   s.src = 'https://trumangu-fun.disqus.com/embed.js';
+    //   s.setAttribute('data-timestamp', +new Date());
+    //   (d.head || d.body).appendChild(s);
+    // })();
+  </script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
