--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-  <title>blog</title>
+  <title>TrumanGu's Blog</title>
 </head>
 
 <body>
@@ -16,22 +16,6 @@
   <script src="./js/highlightjs-line-numbers.min.js" defer></script>
   <script src="./js/jquery-3.4.1.min.js" async></script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-141203333-1"></script>
-
-  <script>
-
-
-    // var disqus_config = function () {
-    //   this.page.url = "/#/article/"
-    //   this.page.identifier = window.location.hash.slice(10)
-    // };
-
-    // (function () { // DON'T EDIT BELOW THIS LINE
-    //   var d = document, s = d.createElement('script');
-    //   s.src = 'https://trumangu-fun.disqus.com/embed.js';
-    //   s.setAttribute('data-timestamp', +new Date());
-    //   (d.head || d.body).appendChild(s);
-    // })();
-  </script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
