--- a/public/index.html
+++ b/public/index.html
@@ -7,18 +7,23 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <title>TrumanGu's Blog</title>
+  <!-- <link rel="stylesheet" href="./css/prism.css"> -->
 </head>
 
 <body>
   <div id="app"></div>
 
-  <script src="./js/highlight.min.js" defer></script>
+  <!-- <script src="./js/prism.js" type="application/x-javascript" defer></script> -->
+  <!-- <script src="./js/highlight.min.js" defer></script>
   <script src="./js/highlightjs-line-numbers.min.js" defer></script>
-  <script src="./js/jquery-3.4.1.min.js" async></script>
+  <script src="./js/jquery-3.4.1.min.js" async></script> -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-141203333-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
     gtag('js', new Date());
 
     gtag('config', 'UA-141203333-1');
