feat: 个人作品模块接口接入

--- a/public/index.html
+++ b/public/index.html
@@ -7,16 +7,11 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <title>TrumanGu's Blog</title>
-  <!-- <link rel="stylesheet" href="./css/prism.css"> -->
+  <meta name="description" content="TrumanGu的个人博客，欢迎访问~">
 </head>
 
 <body>
   <div id="app"></div>
-
-  <!-- <script src="./js/prism.js" type="application/x-javascript" defer></script> -->
-  <!-- <script src="./js/highlight.min.js" defer></script>
-  <script src="./js/highlightjs-line-numbers.min.js" defer></script>
-  <script src="./js/jquery-3.4.1.min.js" async></script> -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-141203333-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
